# DiscordBetBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
src/: AddBetCommand.cpp  AddBetCommand.h  AddMatchCommand.cpp  AddMatchCommand.h  AddResultCommand.cpp  AddResultCommand.h  Bet.cpp  Bet.h  BetBot.cpp  BetBot.h  BettorResults.cpp  BettorResults.h  BotConfigReader.cpp  BotConfigReader.h  BotData.cpp  BotData.h  BotDataExceptions.h  ChooseMatchToBetOnCommand.cpp  ChooseMatchToBetOnCommand.h  ChooseMatchToSetResultCommand.cpp  ChooseMatchToSetResultCommand.h  ClearDataCommand.cpp  ClearDataCommand.h  CommandBase.cpp  CommandBase.h  DateAndTime.cpp  DateAndTime.h  DiscordMessageBuilder.cpp  DiscordMessageBuilder.h  DrawUtils.cpp  DrawUtils.h  FileWatcher.cpp  FileWatcher.h  ICommand.cpp  ICommand.h  ICommandReceiver.cpp  ICommandReceiver.h  ISerializer.h  JsonSerializer.cpp  JsonSerializer.h  (+24 more)
tests/: BotData_Tests.cc  DateAndTime_Tests.cc  MatchScore_Tests.cc  Match_Tests.cc  test.cc
